Aoc 2021 day 2.
Some cleanup of older Java years too (lots of ugly crap there... ;-)