@@ -5,9 +5,9 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public abstract class AbstractAdvent {
@@ -15,32 +15,41 @@ public abstract class AbstractAdvent {
   /**
    * Define the baseDir for input files, must end with a slash '/'!
    */
-  protected static String baseDir =
+  protected String baseDir =
       "/Users/fredrik/git/adventofcode/src/se/attebrant/";
 
-  protected AbstractAdvent() {
-    baseDir = baseDir + "aoc2017/";
-  };
+  private boolean debug = false;
 
-  protected AbstractAdvent(String year) {
-    baseDir = baseDir + "aoc" + year + "/";
+  protected AbstractAdvent() {
+    baseDir += "aoc2017/";
   }
 
-  public static void test(Function<String, Integer> fun, String digits, Integer expected) {
+  /**
+   * Constructor with parameters:
+   * 
+   * @param year set the year to read data from correct folder.
+   * @param debug flip debug logging on/off
+   */
+  protected AbstractAdvent(String year, boolean... debug) {
+    baseDir += "aoc" + year + "/";
+    this.debug = debug.length > 0 && debug[0];
+  }
+
+  public void test(Function<String, Integer> fun, String digits, Integer expected) {
     Integer theSum = fun.apply(digits);
     if (theSum.equals(expected) || expected == -1) {
-      System.out.println(digits + " -> " + theSum);
+      log(digits + " -> " + theSum);
     } else {
       System.err.println(digits + " -> " + theSum + ", expected: " + expected);
     }
   }
 
-  public static List<List<String>> readData(String filename) {
+  public List<List<String>> readData(String filename) {
     List<List<String>> dataMatrix = new ArrayList<>();
 
     try (Stream<String> stream = Files.lines(Paths.get(filename))) {
       List<String> row = new ArrayList<>();
-      stream.forEach(data -> row.add(data));
+      stream.forEach(row::add);
     } catch (IOException ex) {
       ex.printStackTrace();
     }
@@ -48,12 +57,12 @@ public abstract class AbstractAdvent {
     return dataMatrix;
   }
 
-  public static List<List<String>> readData2(String filename) {
+  public List<List<String>> readData2(String filename) {
     List<List<String>> dataMatrix = new ArrayList<>();
 
     try (BufferedReader br = Files.newBufferedReader(Paths.get(filename))) {
       br.lines().forEach(line -> dataMatrix.add(convertLineTolist(line)));
-      List<String> list = br.lines().collect(Collectors.toList());
+      List<String> list = br.lines().toList();
       if (!list.isEmpty()) {
         dataMatrix.add(list);
       }
@@ -64,11 +73,11 @@ public abstract class AbstractAdvent {
     return dataMatrix;
   }
 
-  public static List<String> readData3(String filename) {
+  public List<String> readData3(String filename) {
     List<String> data = new ArrayList<>();
 
     try (BufferedReader br = Files.newBufferedReader(Paths.get(baseDir + filename))) {
-      br.lines().forEach(line -> data.add(line));
+      br.lines().forEach(data::add);
     } catch (IOException ex) {
       ex.printStackTrace();
     }
@@ -76,12 +85,19 @@ public abstract class AbstractAdvent {
     return data;
   }
 
-  private static List<String> convertLineTolist(String line) {
-    List<String> list = new ArrayList<>();
-    for (String word : line.split("\t")) {
-      list.add(word);
+  private List<String> convertLineTolist(String line) {
+    return Arrays.asList(line.split("\t"));
+  }
+
+  /**
+   * Print the message to the console.
+   * 
+   * @param message
+   */
+  public void log(Object message) {
+    if (debug) {
+      System.out.println(message);
     }
-    return list;
   }
 
 }
